--- a/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
+++ b/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
@@ -13,7 +13,7 @@
         <Description>User Messaging Platform iOS Bindings.</Description>
         <PackageProjectUrl>https://jcsawyer.com/</PackageProjectUrl>
         <RepositoryUrl>https://github.com/jcsawyer/Jc.GoogleMobileAds.iOS/tree/main</RepositoryUrl>
-        <Version>2.7.1</Version>
+        <Version>2.7.1-preview100</Version>
     </PropertyGroup>
 
     <ItemGroup>
