--- a/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
+++ b/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
@@ -15,7 +15,7 @@
         <RepositoryUrl>https://github.com/jcsawyer/Jc.GoogleMobileAds.iOS/tree/main</RepositoryUrl>
         <PacakgeReadmeFile>README.md</PacakgeReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Version>2.7.2</Version>
         <Version>2.7.2</Version>
     </PropertyGroup>
 
