--- a/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
+++ b/src/Jc.UMP.iOS/Jc.UMP.iOS.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>true</ImplicitUsings>
         <IsBindingProject>true</IsBindingProject>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <RuntimeIdentifiers>osx-x64;osx-arm64</RuntimeIdentifiers>
+        <RuntimeIdentifiers>iossimulator-x64;ios-arm64</RuntimeIdentifiers>
         <IsTrimmable>true</IsTrimmable>
         <Title>Jc User Messaging Platform iOS Bindings</Title>
         <Authors>Joseph Sawyer</Authors>
@@ -15,14 +15,14 @@
         <RepositoryUrl>https://github.com/jcsawyer/Jc.GoogleMobileAds.iOS/tree/main</RepositoryUrl>
         <PacakgeReadmeFile>README.md</PacakgeReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
-        <Version>2.7.2</Version>
+        <Version>2.7.3</Version>
     </PropertyGroup>
 
     <ItemGroup>
         <ObjcBindingApiDefinition Include="ApiDefinition.cs"/>
         <ObjcBindingCoreSource Include="StructsAndEnums.cs"/>
-        <None Include="../../README.md" Pack="true" PackagePath="/" />
-        <None Include="../../LICENSE" Pack="true" PackagePath="/" />
+        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+        <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
